--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,11 @@
   grid-row: 1;
 }
 
+input[type=number]::-webkit-inner-spin-button {
+  opacity: 1
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
