--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.body {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
@@ -15,13 +19,13 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 20px;
 }
 
 .App-link {
@@ -47,6 +51,13 @@
 
 input[type=number]::-webkit-inner-spin-button {
   opacity: 1
+}
+
+details > summary {
+  list-style: none;
+}
+details > summary::-webkit-details-marker {
+  display: none;
 }
 
 
